--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+
+* {
+    font-family: Roboto, serif;
+}
+
 #app{
     min-height: 100vh;
 }
@@ -21,3 +27,5 @@
     align-content: center;
     align-items: center;
 }
+
+
