--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,3 +65,14 @@ input[aria-controls=DataTables_Table_0],input[aria-controls=DataTables_Table_0]:
     background-color: #212529!important;
     color: #dee2e6;
 }
+
+.card-header{
+    background-color: #33393f;
+    color: #dee2e6;
+}
+
+.card-body{
+    background-color: #212529;
+    color: #dee2e6;
+
+}
