--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,7 +144,7 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     width: 30%;
 }
 
-.dropdown-menu.show {
+table .dropdown-menu.show {
     display: inline-flex;
     justify-content: space-evenly;
 }
@@ -155,5 +155,4 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
 .dark-background{
     background-color: #4b4b4b;
 }
-
 
