--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -133,6 +133,10 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     box-shadow: 0 0 0 0.25rem rgb(46 138 210 / 50%);
 }
 
+.text-primary-dark {
+    color: #2891de;
+}
+
 #DataTables_Table_0_processing {
     background-color: #24292d;
     border: #d83131 1px solid;
@@ -145,28 +149,82 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     width: 30%;
 }
 
+.dataTables_scrollHeadInner, .yajra-datatable {
+    margin: auto;
+}
+
+#DataTables_Table_0_wrapper .row:nth-child(odd) {
+    margin-top: 1em;
+    justify-content: space-around;
+}
+
+#DataTables_Table_0_wrapper .row:nth-child(odd) div {
+    width: 30%;
+}
+
+#DataTables_Table_0_filter {
+    float: right;
+}
+
 table .dropdown-menu.show {
     display: inline-flex;
     justify-content: space-evenly;
 }
-.blue-color{
+
+.blue-color {
     color: #2891de;
 }
 
-.dark-background{
+.dark-background {
     background-color: #4b4b4b;
 }
 
-.square{
+.square {
     width: 200px;
     height: 200px;
     background: #0a53be;
     margin-bottom: 2em;
 }
 
-.container-img-desc{
+.container-img-desc {
     text-align: left;
 }
-.container-img-desc p{
+
+.container-img-desc p {
     max-width: 200px;
+}
+
+.dataTables_scrollBody {
+    overflow-x: scroll !important; /* Add the ability to scroll */
+}
+
+.dataTables_scrollBody::-webkit-scrollbar {
+    display: none !important;
+}
+
+.dataTables_scrollBody {
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
+}
+
+@media screen and (max-width: 992px) {
+    li.paginate_button.previous {
+        display: inline;
+    }
+
+    li.paginate_button.next {
+        display: inline;
+    }
+
+    li.paginate_button {
+        display: none;
+    }
+
+    #DataTables_Table_0_wrapper .row:nth-child(odd) {
+        justify-content: center
+    }
+
+    #DataTables_Table_0_wrapper .row:nth-child(odd) div {
+        width: 100%;
+    }
 }
