vista home admin

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #31373d;
-    color: #eaeaea;
+    color: #dee2e6;
 }
 
 #app {
@@ -211,9 +211,9 @@ table .dropdown-menu.show {
     scrollbar-width: none !important;
 }
 
-.echart {
-    width: 600px;
-    height: 600px;
+.categories-pie, .days-bar {
+    min-width: 20em;
+    min-height: 50vh;
 }
 
 @media screen and (max-width: 992px) {
