--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -98,10 +98,12 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     color: #dee2e6;
 }
 
-.card-body {
+.card-body, .card-footer {
     background-color: #212529;
     color: #dee2e6;
+    border-color: #dee2e6;
 }
+
 
 .button-primary-dark {
     color: #dee2e6;
@@ -144,7 +146,11 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     color: #2891de;
 }
 
-.pagination{
+a .text-primary-dark:hover {
+    color: #4ab1ff;
+}
+
+.pagination {
     justify-content: center;
 }
 
@@ -171,7 +177,8 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     margin-left: 5em;
     text-align: center;
 }
-.dt-buttons{
+
+.dt-buttons {
     width: fit-content;
     margin-bottom: 2em;
 }
@@ -214,7 +221,7 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
     box-shadow: 0 0 0 0.25rem rgba(49, 159, 32, 0.59);
 }
 
-.buttons-filter{
+.buttons-filter {
     margin-left: 1em;
 }
 
@@ -272,30 +279,40 @@ table .dropdown-menu.show {
     min-height: 50vh;
 }
 
-.sorting, .sorting_desc, .sorting_asc{
+.sorting, .sorting_desc, .sorting_asc {
     cursor: pointer;
 }
 
-.yajra-datatable td,.yajra-datatable th {
+.yajra-datatable td, .yajra-datatable th {
     min-width: 8em;
     text-align: center;
     vertical-align: center;
 }
 
-.hide{
+.hide {
     visibility: hidden;
 }
 
-.start-date, .end-date{
+.start-date, .end-date {
     background-color: #212529;
     color: #dee2e6;
     border: #d83131 1px solid;
 }
 
-.start-date:focus, .end-date:focus{
+.start-date:focus, .end-date:focus {
     background-color: #212529;
     color: #dee2e6;
     border: #d83131 1px solid;
+
+}
+
+.card p {
+    width: fit-content;
+}
+
+.card-img-top.dark-background {
+
+    min-height: 15em;
 
 }
 
@@ -326,7 +343,7 @@ table .dropdown-menu.show {
 
 }
 
-.btn{
+.btn {
     min-width: 2.7em;
 }
 
