--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,10 @@ body {
     padding-top: 8em;
 }
 
+.navbar {
+    z-index: 5;
+}
+
 .navbar__container {
     position: fixed;
     z-index: 2;
@@ -128,8 +132,6 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
 }
 
 .button-primary-outline-dark:focus {
-    color: #dee2e6;
-    background-color: #41a5ff;
     border-color: #41a5ff;
     box-shadow: 0 0 0 0.25rem rgb(38 92 143 / 50%);
 }
@@ -142,10 +144,10 @@ input[aria-controls=DataTables_Table_0], input[aria-controls=DataTables_Table_0]
 }
 
 .text-primary-dark {
-    color: #2891de;
+    color: #41a5ff;
 }
 
-a .text-primary-dark:hover {
+a.text-primary-dark:hover, button.text-primary-dark:hover {
     color: #4ab1ff;
 }
 
@@ -292,6 +294,10 @@ table .dropdown-menu.show {
     vertical-align: center;
 }
 
+.btn {
+    min-width: 2.7em;
+}
+
 .hide {
     visibility: hidden;
 }
@@ -321,7 +327,32 @@ table .dropdown-menu.show {
 
 }
 
+#category {
+    width: 70%;
+}
+
+.add-cart {
+    z-index: 2;
+}
+
+.input-amount {
+    width: 3em;
+    display: inline-flex;
+    text-align: center;
+}
+
+
+.address-chooser {
+    padding: 1em;
+    border: #d83131 1px solid;
+}
+
+.checkout-form-background{
+    background-color: rgba(36, 36, 44, 0.54);
+}
+
 @media screen and (max-width: 768px) {
+
     li.paginate_button.previous {
         display: inline;
     }
@@ -350,9 +381,6 @@ table .dropdown-menu.show {
 
 }
 
-.btn {
-    min-width: 2.7em;
-}
 
 @media (prefers-reduced-motion: reduce) {
     .buttons-pdf {
