--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@
 body {
     background-color: #31373d;
     color: #dee2e6;
+
 }
 
 #app {
@@ -16,13 +17,9 @@ body {
     padding-top: 8em;
 }
 
-.navbar {
-    z-index: 6;
-}
-
 .navbar__container {
     position: fixed;
-    z-index: 2;
+    z-index: 6;
     width: 100%;
 }
 
@@ -332,9 +329,18 @@ table .dropdown-menu.show {
 }
 
 .input-amount {
-    width: 3em;
+    width: 5em;
     display: inline-flex;
     text-align: center;
+}
+
+.input-amount::-webkit-outer-spin-button, .input-amount::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.input-amount[type=number] {
+    -moz-appearance: textfield;
 }
 
 
@@ -343,9 +349,92 @@ table .dropdown-menu.show {
     border: #d83131 1px solid;
 }
 
-.checkout-form-background{
+.checkout-form-background {
     background-color: rgba(36, 36, 44, 0.54);
 }
+
+.spinner-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+}
+
+.spinner {
+    position: relative;
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+}
+
+.spinner::before,
+.spinner:after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+}
+
+.spinner:before {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(90deg, #d83131 0%, #b6b6b6 100%);
+    -webkit-animation: spin .5s infinite linear;
+            animation: spin .5s infinite linear;
+}
+
+.add-cart {
+    z-index: 2;
+}
+
+@-webkit-keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+
+}
+
+.sidebar {
+    background-color: #212529;
+    position: fixed;
+    height: 100%;
+    top: 60px;
+    left: 0;
+    z-index: 3;
+    padding: 7em 1.5em 1.5em;
+    overflow-y: scroll !important;
+    max-width: 22em;
+}
+
+.sidebar::-webkit-scrollbar {
+    display: none !important;
+}
+
+.sidebar {
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
+}
+
+.close-filters{
+    position: fixed;
+    top: 90px;
+    left: 15px;
+    z-index: 4;
+}
+
 
 @media screen and (max-width: 768px) {
 
@@ -373,14 +462,6 @@ table .dropdown-menu.show {
         width: -webkit-fit-content;
         width: -moz-fit-content;
         width: fit-content;
-    }
-
-}
-
-
-@media (prefers-reduced-motion: reduce) {
-    .buttons-pdf {
-        transition: none;
     }
 
 }
