--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -455,6 +455,13 @@ a.selected:hover{
 #search-input{
     width: 95%;
 }
+
+.img-home{
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 100%;
+    max-height: 250px;
+}
 @media screen and (max-width: 768px) {
 
     li.paginate_button.previous {
